Fix values printed by mysqldump for empty blob fields when --hex-blob is used. (Bug #13318)